loader bug squashed

--- a/src/components/add-brick.css
+++ b/src/components/add-brick.css
@@ -36,4 +36,5 @@
 
 .add-brick .add-buttons button {
   margin: 0 20px;
+  gap: 5px;
 }
