--- a/src/components/code-brick.css
+++ b/src/components/code-brick.css
@@ -5,12 +5,12 @@
 }
 
 .progress-cover {
-  height: 100%;
-  width: 100%;
   display: flex;
+  margin: auto;
+  height: 100%;
+  flex-grow: 1;
+  background-color: white;
   align-items: center;
-  padding-left: 10%;
-  padding-right: 10%;
   animation: fadeIn 0.5s;
 }
 
@@ -24,4 +24,9 @@
   100% {
     opacity: 1;
   }
+}
+
+#progress-bar {
+  margin: auto;
+  width: 50% !important;
 }
